--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
     <string name="app_name">簡章篩選</string>
     <string name="school_name">學校名稱</string>
     <string name="department_name">科系名稱</string>
+    <string name="description">查看釘選內容</string>
     <string name="ad_id_main">ca-app-pub-3940256099942544/6300978111</string>
     <string-array name="school_name">
         <item>國立臺灣大學</item>
